Removed unused dependencies.

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -7,7 +7,8 @@ project(rtp_connect_tools_superbuild)
 include(cmake/ExternalSpdlog.cmake)
 include(cmake/ExternalFmt.cmake)
 include(cmake/ExternalTomlPlusPlus.cmake)
-include(cmake/ExternalBoost.cmake)
+include(cmake/ExternalCLI11.cmake)
+#include(cmake/ExternalBoost.cmake)
 include(cmake/ExternalCatch2.cmake)
-include(cmake/ExternalWxWidgets.cmake)
+#include(cmake/ExternalWxWidgets.cmake)
 include(cmake/ExternalRtpConnectTools.cmake)
